--- a/5-d3-enterExit.html
+++ b/5-d3-enterExit.html
@@ -33,6 +33,8 @@
 				.selectAll("circle")
 				.data(dataset);
 				
+				//circles.enter().append("circle")
+				
 				circles
 				//.transition()
 				//.delay (function(d,i) {return i * 1000;})
