--- a/9-d3-transform.html
+++ b/9-d3-transform.html
@@ -80,50 +80,44 @@
 				.on("click", function() {
 
 					//New values for dataset
-					var numValues = dataset.length;						 		//Count original length of dataset
-					var maxRange = 500;						//Max range of new values
-					dataset = [];  						 				 		//Initialize empty array
-					for (var i = 0; i < numValues; i++) {				 		//Loop numValues times
-						var newNumber1 = Math.floor(Math.random() * maxRange);	//New random integer
-						var newNumber2 = Math.floor(Math.random() * maxRange);	//New random integer
-						dataset.push([newNumber1, newNumber2]);					//Add new number to array
+					var numValues = dataset.length;						 		
+					var maxRange = 500;						
+					dataset = [];  						 				 		
+					for (var i = 0; i < numValues; i++) {				 		
+						var newNumber1 = Math.floor(Math.random() * maxRange);	
+						var newNumber2 = Math.floor(Math.random() * maxRange);	
+						dataset.push([newNumber1, newNumber2]);					
 					}
 					
-					//Update scale domains
+					//Mise à jour des échelles
 					xScale.domain([0, d3.max(dataset, function(d) { return d[0]; })]);
 					yScale.domain([0, d3.max(dataset, function(d) { return d[1]; })]);
 
-					//Update all circles
+					//Affichage des nouveaux cercles
 					svg.selectAll("circle")
 					   .data(dataset)
 					   .transition()
-					   .duration(1000)	
-	/*				   .each("start", function() {      // <-- Executes at start of transition // pas de transition ici
-						   d3.select(this)
-							 .attr("r", Math.floor(Math.random() * 10 + 5));
-					   })*/					   
+					   .duration(1000)				   
 					   .attr("cx", function(d) {
 					   		return xScale(d[0]);
 					   })
 					   .attr("cy", function(d) {
 					   		return yScale(d[1]);
 					   })
-//					   .transition()
-//					   .duration(1000)	
 					   .attr("fill", d3.rgb(Math.floor(Math.random() * 255),Math.floor(Math.random() * 255),Math.floor(Math.random() * 255)))
-/*					   .each("end", function() {      // <-- Executes at end of transition  // pas de transition ici
+/*					   .each("end", function() {      // 
 						   d3.select(this)
 							 .attr("r", Math.floor(Math.random() * 10 + 5));
 					   })	*/
 					   ;
 
-					//Update X axis
+					//Mise à jour de l'axe X
 					svg.select(".x.axis")
 				    	.transition()
 				    	.duration(1000)
 						.call(xAxis);
 					
-					//Update Y axis
+					//Mise à jour de l'axe Y
 					svg.select(".y.axis")
 				    	.transition()
 				    	.duration(1000)
