--- a/11-d3-geojson.html
+++ b/11-d3-geojson.html
@@ -19,18 +19,17 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-
-			//Width and height
+		
 			var w = 500;
 			var h = 500;
 						
-			//Define map projection
+			//Choix de la projection
 			var projection = d3.geo.mercator()
 									.center([2.454071, 47.279229]) 
 								   .translate([w/2, h/2])
 								   .scale([9000]);
 
-			//Define path generator
+			//Generateur de path
 			var path = d3.geo.path()
 							 .projection(projection);
 			
