--- a/8-d3-axis.html
+++ b/8-d3-axis.html
@@ -13,6 +13,18 @@
 .grid path {
           stroke-width: 0;
 }
+
+			.axis path,
+			.axis line {
+				fill: none;
+				stroke: black;
+				shape-rendering: crispEdges;
+			}
+			
+			.axis text {
+				font-family: sans-serif;
+				font-size: 11px;
+			}
 		</style>
 	</head>
 	<body>
@@ -75,9 +87,10 @@
 			//creation de l'axe X
 			var xAxis = d3.svg.axis();
 			xAxis.scale(xScale);
-			xAxis.orient("bottom"); 
+			xAxis.orient("bottom").ticks(5); 
 			svg.append("g")
 			.attr("transform", "translate(0," + (h - padding) + ")")
+			.attr("class", "axis")
 			.call(xAxis);		
 			
 			//Creation de la grille verticale
@@ -92,13 +105,18 @@
 			//creation de la grille hotrizontale
 			var yAxis = d3.svg.axis();
 			yAxis.scale(yScale).orient("left");
-			svg.append("g")            
+			svg.append("g")
+			.attr("transform", "translate(" + padding + ",0)")
+			.attr("class", "axis")
+			.call(yAxis);	
+			
+			/*svg.append("g")            
 			.attr("class", "grid")
 			.attr("transform", "translate(" + padding + ",0)")
 			.call(yAxis
 				.tickSize(-w+2*padding, 0, 0)
 				.tickFormat("")
-			);
+			);*/
 			
 			
 		</script>
